--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ author: L-3177
 url: ''
 resume_site: https://l-3177.github.io/myBlog/
 github: https://github.com/l-3177/
-baseurl: "/myblog"
+baseurl: "/myBlog"
 description: Actually, less is more!
 meta_description: 个人博客;学而不思则罔;思而不学则殆;生命不止;折腾不休
 motto: It's our wits that make us men.
